ORP-210 fixed collapsed card

--- a/client/src/style/sass/common/_filter-list.scss
+++ b/client/src/style/sass/common/_filter-list.scss
@@ -27,6 +27,7 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 10px;
+    cursor: pointer;
   }
 
   &__title {
